2004-12-05  Miguel de Icaza  <miguel@ximian.com>

	* class.cs: Distinguish between 1721 and 1722 (just a little help
	for the programmer).

2004-12-03  Miguel de Icaza  <miguel@ximian.com>

	* delegate.cs: Only allow this on new versions of the language. 

2004-12-02  Duncan Mak  <duncan@ximian.com>

	* ecore.cs (PropertyExpr.IsAccessorAccessible): Moved to
	Expression class.
	(Expression.IsAccessorAccessible): Moved from the PropertyExpr to
	here as a static method. Take an additional bool out parameter
	`must_do_cs1540_check' for signaling to InstanceResolve.
	(PropertyExpr.InstanceResolve): Removed the `must_do_cs1540_check'
	member field from PropertyExpr class and made it an argument of
	the method instead.
	(EventExpr.InstanceResolve): Copied from PropertyExpr, removed the
	check for MarshalByRefObject, and report CS0122 instead of CS1540.
	(EventExpr.DoResolve): Call IsAccessorAccessible on `add_accessor'
	and `remove_accessor' as well as InstanceResolve: report CS0122
	where applicable.

	Fixes #70129.

2004-12-03  Raja R Harinath  <rharinath@novell.com>

	Fix test-327.cs, test-328.cs, and put in early infrastructure
	for eventually fixing #52697.
	* namespace.cs (NamespaceEntry.LookupForUsing): New method.
	(NamespaceEntry.LookupNamespaceOrType): New method, refactored
	from other methods.
	(NamespaceEntry.Lookup): Remove 'ignore_using' flag.
	(AliasEntry.Resolve, UsingEntry.Resolve): Use 'LookupForUsing'.
	(VerifyUsing, error246): Update.
	* rootcontext.cs (RootContext.NamespaceLookup): Just use
	'NamespaceEntry.LookupNamespaceOrType'.

2004-12-03  Martin Baulig  <martin@ximian.com>

	* delegate.cs (NewDelegate.DoResolve): If we have an anonymous
	method as our child, call AnonymousMethod.Compatible() on it.

2004-12-03  Raja R Harinath  <rharinath@novell.com>

	Disable XML documentation support in 'basic' profile.
	* decl.cs, class.cs [BOOTSTRAP_WITH_OLDLIB]: Don't import System.Xml.
	Redirect XmlElement to System.Object.