@@ -1,0 +1,14 @@
+// cs0165.cs: Use of unassigned local variable 's'
+// Line: 9
+
+public class Test
+{
+        public static string Foo {
+                get {
+                        string s;
+                        if (0 == 1 && (s = "") == "a" || s == "")
+                                return s;
+                        return " ";
+                }
+        }
+}
