@@ -1,3 +1,14 @@
+2004-12-06  Marek Safar  <marek.safar@seznam.cz>
+
+	Fixed #69195, #56821
+	* ecore.cs (ResolveBoolean): Tiny refactoring.
+
+	* expression.cs (Binary.DoResolve): Add warning 429 and skipping
+	of right expression resolving when left is false constant and
+	operator is LogicalAnd OR true constant and operator is LogicalOr.
+
+	* statement.cs (ResolveUnreachable): Always reports warning.
+
 2004-12-05  Miguel de Icaza  <miguel@ximian.com>
 
 	* class.cs: Distinguish between 1721 and 1722 (just a little help
